# dumbledoor

./: .editorconfig  Cargo.toml  README.md  clippy.toml  deny.toml  justfile  rustfmt.toml
.github/workflows/: ci.yml
.kiro/hooks/: privacy-guard.kiro.hook  unsafe-code-guard.kiro.hook
.kiro/specs/process-manager/: adr-001-unsafe-code-isolation.md  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
examples/: basic_usage.rs  cleanup_test.rs  controlled_cleanup_test.rs  platform_check.rs  windows_platform_test.rs
process-manager/: Cargo.toml
process-manager/src/: cleanup.rs  error.rs  lib.rs  linux.rs  macos.rs  platform.rs  plugin.rs  reaper.rs  windows.rs
process-manager/src/platform/: linux.rs  macos.rs  windows.rs  windows_safe.rs
process-manager/tests/: README.md  e2e_test.rs  integration_focused_test.rs  integration_test.rs  macos_e2e_test.rs  macos_platform_test.rs  platform_features_test.rs  process_lifecycle_test.rs  reaper_test.rs  sigkill_cleanup_test.rs  windows_e2e_test.rs
process-manager/tests/common/: mod.rs
process-manager/tests/test_victims/: sigkill_victim.rs
unsafe-linux-process/: Cargo.toml
unsafe-linux-process/src/: lib.rs
unsafe-macos-process/: Cargo.toml
unsafe-macos-process/src/: lib.rs
unsafe-windows-process/: Cargo.toml  README.md
unsafe-windows-process/src/: lib.rs
