[package]
name = "process-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
unsafe-windows-process = { path = "../unsafe-windows-process" }

[dev-dependencies]
tracing-subscriber = "0.3"

[[example]]
name = "basic_usage"
path = "../examples/basic_usage.rs"

[[example]]
name = "windows_platform_test"
path = "../examples/windows_platform_test.rs"

[[example]]
name = "cleanup_test"
path = "../examples/cleanup_test.rs"

[[example]]
name = "controlled_cleanup_test"
path = "../examples/controlled_cleanup_test.rs"

[[example]]
name = "platform_check"
path = "../examples/platform_check.rs"