[package]
name = "process-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
unsafe-windows-process = { path = "../unsafe-windows-process" }

[dev-dependencies]
tracing-subscriber = "0.3"

# Dependencies for binaries
[dependencies.tracing-subscriber]
version = "0.3"
optional = true

[features]
default = []
binary-deps = ["tracing-subscriber"]

[[example]]
name = "basic_usage"
path = "../examples/basic_usage.rs"

[[example]]
name = "windows_platform_test"
path = "../examples/windows_platform_test.rs"

[[example]]
name = "platform_check"
path = "../examples/platform_check.rs"

# Binary for SIGKILL cleanup testing (test victim process)
[[bin]]
name = "sigkill_victim"
path = "tests/test_victims/sigkill_victim.rs"
required-features = ["binary-deps"]