[package]
name = "unsafe-windows-process"
version = "0.1.0"
edition = "2021"
description = "Unsafe Windows process management primitives"

[dependencies]
winapi = { version = "0.3", features = [
    "handleapi",
    "jobapi2", 
    "processthreadsapi",
    "synchapi",
    "winbase",
    "winnt",
    "minwindef",
    "winerror"
] }
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "handleapi",
    "jobapi2", 
    "processthreadsapi",
    "synchapi",
    "winbase",
    "winnt",
    "minwindef",
    "winerror"
] }